--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css"><link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
 </head>
 <body>
     
@@ -23,8 +24,40 @@
 
 
     </div>
+    <div class="middle">
+        <img class="avatar" src="./images/circle-cropped.png" alt="">
+        <h2>Hello!</h2>
+        <p>I'm a Computer Engineer and I enjoy making websites. I ❤️ Coffee and I make my own Toast.</p>
+    </div>
 
- 
+   <hr class="new">
+   <h2>My Skills</h2>
+    <div>
+   <div class="skills">
+       <img class="code-img" src="./images/computer.png" alt="">
+       <h3> Design & Development</h3>
+       <p>I started coding when I was 16 years old. I can make beautiful websites and deploy them over cloud. I prefer GNU/linux for daily use. </p>
+</div>
+</div>
+<div>
+<div class="skills">
+    <img class="chillie-img" src="./images/chillies.png" alt="">
+    <h3> Hot Wings Challenge</h3>
+    <p> But my best skill is eating Hot Wings! I am the undisputed king of Hot Wings Challenge. </p>
+</div>
+</div>
+<hr class="new">
+<div class="lower"><h2>Get In Touch</h2>
+<h3>If you love Hot Wings as much as I do!</h3>
+</div>
+
+<footer><div class="footerbox">
+    <a href="mailto:digvijayredekar17@gmail.com">Email</a>
+    <a href="https://www.linkedin.com/in/digvijayredekar17/">Linkedin</a>
+
+</div></footer>
+
+
     
 </body>
 </html>
