--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="name">
         <h1>I'm Digvijay</h1>
-        <p class="centre">A Programmer</p>
+        <p class="centre">A <span class="uline">Pro</span>grammer</p>
         </div>
         
         <img class="cloudtwo" src="./images/cloud.png" alt=""/>
